--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py36
 
 [testenv]
-deps = -r{toxinidir}/requirements/dev.txt
+deps = -rrequirements.txt
 commands=py.test -v
 passenv =
     TRAVIS
