--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ cache: pip
 install:
   - pip install -r requirements.txt
   - pip install tox-travis coveralls
+  - pip install codecov
 script:
   - tox
   - coverage run --source ctci -m py.test
-  - coverage report -m
 after_success:
   - codecov
