--- a/tox.ini
+++ b/tox.ini
@@ -17,3 +17,12 @@ python =
 addopts = --ignore=setup.py
 python_files = *.py
 python_functions = test_
+
+[testenv:cov]
+deps =
+    coverage
+    numpydoc
+    {[testenv]deps}
+commands =
+    coverage run --source ctci.python -m py.test
+    coverage report
