--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36
+envlist = py36, cov
 
 [testenv]
 deps = -rrequirements.txt
@@ -8,6 +8,7 @@ passenv =
     TRAVIS
     TRAVIS_BRANCH
     TRAVIS_JOB_ID
+    CODECOV_*
 
 [travis]
 python =
@@ -21,8 +22,8 @@ python_functions = test_
 [testenv:cov]
 deps =
     coverage
-    numpydoc
     {[testenv]deps}
 commands =
-    coverage run --source ctci.python -m py.test
+    coverage erase
+    coverage run -m py.test
     coverage report
