Add CI:Travis and Codecov integration
* update tox

* add MANIFEST

* codecov integration

* codecov integration

* codecov integration

* add .tox folder to ignore

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
 [tox]
-envlist = py36
+envlist = py36, cov
 
 [testenv]
-deps = -r{toxinidir}/requirements/dev.txt
+deps = -rrequirements.txt
 commands=py.test -v
 passenv =
     TRAVIS
     TRAVIS_BRANCH
     TRAVIS_JOB_ID
+    CODECOV_*
 
 [travis]
 python =
@@ -17,3 +18,12 @@ python =
 addopts = --ignore=setup.py
 python_files = *.py
 python_functions = test_
+
+[testenv:cov]
+deps =
+    coverage
+    {[testenv]deps}
+commands =
+    coverage erase
+    coverage run -m py.test
+    coverage report
